# time-series-transfusion-ecg

./: .gitinogre  pyproject.toml
config/: config.py  data.yaml  train.yaml
pipline/: adaptive_windowing.py
scripts/: downtream_arrhythmia_cks_training.py  generator_training.py  generator_training_v1.py  postprocess_generated_labels.py  seg_beat_cls_training.py  segment.py  segment_with_ppld.py
src/datasets/: downstream_prepare_tstr_dts.py  gen_real_dts_v0.py  gen_real_dts_v1.py  seg_real_dts.py
src/evaluation/: downstream_evaluator.py  gen_evaluator.py  seg_evaluator.py
src/loader/: load_data.py
src/models/: downstream_arrhythmia_cls_cnn.py  generator_transfusion.py  seg_beat_cls_cnn.py  transfusion.py
src/preprocessing/: downtream_preprocess.py  ecg_windowing.py  gen_preprocess.py  seg_preprocess.py
src/train/: downtream_trainer.py  gen_trainer.py  seg_trainer.py
src/ultis/: sigw1_metrics.py  ultis.py
